--- a/package.json
+++ b/package.json
@@ -18,9 +18,9 @@
   "homepage": "https://github.com/tarun27in/FS1030#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "ejs": "^3.0.2",
+    "ejs": "^3.1.3",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.1",
+    "express-fileupload": "^1.1.10",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
     "req-flash": "0.0.3"
